--- a/src/pug/layouts/head.pug
+++ b/src/pug/layouts/head.pug
@@ -10,7 +10,7 @@ html(lang="ru")
         link(rel='preconnect', href='https://fonts.googleapis.com')
         link(rel='preconnect', href='https://fonts.gstatic.com', crossorigin)
         link(href='css/styles.min.css', rel='stylesheet')
-        link(rel="icon" href="favicon.ico" type="image/svg+xml")
+        link(rel="icon" href="fav.svg" type="image/svg+xml")
         title #{title}
         script(src='js/smooth-scrollbar.js')
         script(src='js/anime.min.js')
